Fix alert border on small screens

--- a/resources/scss/components/_alert.scss
+++ b/resources/scss/components/_alert.scss
@@ -1,12 +1,23 @@
 .alert {
 	background: $light-blue;
 	border-color: $blue-border;
-	border-radius: $border-radius;
 	border-style: solid;
-	border-width: 1px;
+	border-width: 1px 0;
 	box-shadow: 2px 2px $darkish-blue;
 	margin: 12px -16px 0;
 	padding: 16px;
+
+	@media (min-width: #{$auth-width + 1px}) {
+		.article--auth & {
+			border-radius: $border-radius;
+			border-width: 1px;
+		}
+	}
+
+	@media (min-width: #{$max-width + 1px}) {
+		border-radius: $border-radius;
+		border-width: 1px;
+	}
 }
 
 .alert--danger {
