--- a/resources/scss/pages/_auth.scss
+++ b/resources/scss/pages/_auth.scss
@@ -4,6 +4,6 @@
 	justify-content: center;
 
 	.contain {
-		max-width: 420px;
+		max-width: $auth-width;
 	}
 }
