--- a/resources/scss/utilities/_variables.scss
+++ b/resources/scss/utilities/_variables.scss
@@ -42,6 +42,7 @@ $button-margin: 5px;
 $checkbox-size: 32px;
 $checkbox-margin-right: 8px;
 
+$auth-width: 420px;
 $max-width: 1024px;
 $content-width: 720px;
 $sidebar-width: $max-width - $content-width;
